add business logic

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,28 +1,102 @@
-# This file configures the analyzer, which statically analyzes Dart code to
-# check for errors, warnings, and lints.
-#
-# The issues identified by the analyzer are surfaced in the UI of Dart-enabled
-# IDEs (https://dart.dev/tools#ides-and-editors). The analyzer can also be
-# invoked from the command line by running `flutter analyze`.
-
-# The following line activates a set of recommended lints for Flutter apps,
-# packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
 
-linter:
-  # The lint rules applied to this project can be customized in the
-  # section below to disable rules from the `package:flutter_lints/flutter.yaml`
-  # included above or to enable additional rules. A list of all available lints
-  # and their documentation is published at https://dart.dev/lints.
-  #
-  # Instead of disabling a lint rule for the entire project in the
-  # section below, it can also be suppressed for a single line of code
-  # or a specific dart file by using the `// ignore: name_of_lint` and
-  # `// ignore_for_file: name_of_lint` syntax on the line or in the file
-  # producing the lint.
-  rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+analyzer:
+  language:
+    strict-casts: false
+  exclude:
+    - "**/**.g.dart"
+    - "**/**.tailor.dart"
+    - "bricks/**/__brick__/**"
+    - "lib/l10n/**"
+  errors:
+    invalid_assignment: ignore
+    invalid_annotation_target: ignore
+    todo: info
+    prefer_final_fields: ignore
+    constant_identifier_names: ignore
+    prefer_single_quotes: ignore
+  plugins:
+    - dart_code_metrics
 
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+linter:
+  rules:
+    # relative imports
+    always_use_package_imports: true
+    prefer_relative_imports: false
+    prefer_single_quotes: true
+
+    # other
+    dangling_library_doc_comments: false
+    sort_pub_dependencies: false
+    unnecessary_library_directive: false
+    prefer_const_constructors: true
+    implementation_imports: true
+    prefer_final_in_for_each: true
+    prefer_if_elements_to_conditional_expressions: true
+
+
+dart_code_metrics:
+  metrics:
+    cyclomatic-complexity: 20
+    halstead-volume: 150
+    lines-of-code: 100
+    maintainability-index: 50
+    maximum-nesting-level: 5
+    number-of-methods: 10
+    number-of-parameters: 8
+    source-lines-of-code: 100
+    weight-of-class: 0.33
+
+  metrics-exclude:
+    - test/**
+
+  rules:
+    - avoid-cascade-after-if-null
+    - avoid-double-slash-imports
+    - avoid-duplicate-exports
+    - avoid-global-state
+    - avoid-missing-enum-constant-in-map
+    - avoid-redundant-async
+    - avoid-throw-in-catch-block
+   # - avoid-top-level-members-in-tests
+    - avoid-unnecessary-conditionals
+    - avoid-unnecessary-type-assertions
+    - avoid-unnecessary-type-casts
+    - avoid-unrelated-type-assertions
+    - avoid-unused-parameters
+    - binary-expression-operand-order
+    - list-all-equatable-fields
+    - member-ordering:
+        order:
+          - public-fields
+          - private-fields
+          - constructors
+          - close-method
+          - dispose-method
+        widgets-order:
+          - constructor
+          - init-state-method
+          - did-change-dependencies-method
+          - did-update-widget-method
+          - dispose-method
+          - build-method
+    - no-boolean-literal-compare
+    - no-equal-then-else
+    - no-object-declaration
+    - prefer-commenting-analyzer-ignores
+    - prefer-enums-by-name
+    - prefer-first
+    - prefer-immediate-return
+    - prefer-iterable-of
+    - prefer-last
+    - prefer-trailing-comma
+    - always-remove-listener
+    - avoid-border-all
+    - avoid-unnecessary-setstate
+    - avoid-expanded-as-spacer
+    - avoid-wrapping-in-padding
+    - check-for-equals-in-render-object-setters
+    - consistent-update-render-object
+    - prefer-const-border-radius
+    - prefer-correct-edge-insets-constructor
+    - prefer-using-list-view
