--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,28 +35,27 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
+  retrofit: ^4.1.0
+  dio: ^5.5.0+1
+  equatable: ^2.0.5
+  meta: ^1.15.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  lint: ^2.1.2
+  retrofit_generator: ^8.1.0
+  build_runner: ^2.4.9
 
 flutter:
   uses-material-design: true
   assets:
     - assets/fonts/
   fonts:
-    - family: Roboto
+    - family: SFPro
       fonts:
-        - asset: assets/fonts/roboto/Roboto-Thin.ttf
-          weight: 100
-        - asset: assets/fonts/roboto/Roboto-Light.ttf
-          weight: 300
-        - asset: assets/fonts/roboto/Roboto-Regular.ttf
-          weight: 400
-        - asset: assets/fonts/roboto/Roboto-Medium.ttf
-          weight: 500
-        - asset: assets/fonts/roboto/Roboto-Bold.ttf
-          weight: 700
-        - asset: assets/fonts/roboto/Roboto-Black.ttf
-          weight: 900
+        - asset: assets/fonts/SF-Pro-Text-Bold.otf
